--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>wheel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>wheel</name>
-	<description>Demo project for Spring Boot</description>
+	<description>wheel</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -28,6 +28,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.47</version>
 		</dependency>
 	</dependencies>
 
