--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-# 页面默认前缀目录
-spring.mvc.view.prefix=/WEB-INF/jsp/
+# 文件上传目录
+file.upload=d:/upload
 
-# 响应页面默认后缀
-spring.mvc.view.suffix=.jsp
+# 数据库配置
