--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
+#访问该项目的项目路径，不配置时默认为 /  ,配置后必须加上项目名才能访问项目
+server.context-path=/leo
+
 # 文件上传目录
 file.upload=d:/upload
 
 # 数据库配置
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.url =jdbc:mysql://47.75.89.172:3306/quick4j
+spring.datasource.username =root
+spring.datasource.password =Leo@0624
