--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.datasource.url =jdbc:mysql://47.75.89.172:3306/quick4j
 spring.datasource.username =root
 spring.datasource.password =Leo@0624
+
+#上传文件大小限制
+spring.http.multipart.max-file-size = 200Mb
+spring.http.multipart.max-request-size= 210Mb
