--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>wheel</description>
 
 	<properties>
+		<dao.target.dir>src/main/java/com/leo/wheel/biz</dao.target.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
@@ -38,10 +39,12 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.0</version>
 		</dependency>
-		<!-- mysql connector -->
+		<!-- mysql connector <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
+			<scope>runtime</scope> </dependency> -->
+		<!-- pPostgreSQL connector -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<!-- 文件上传插件 -->
@@ -81,6 +84,10 @@
 
 	<build>
 		<plugins>
+			<!-- mybatis generator <plugin> <groupId>org.mybatis.generator</groupId> 
+				<artifactId>mybatis-generator-maven-plugin</artifactId> <version>1.3.7</version> 
+				<executions> <execution> <id>Generate MyBatis Artifacts</id> <goals> <goal>generate</goal> 
+				</goals> </execution> </executions> </plugin> -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
