--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,21 @@ server.context-path=/leo
 # 文件上传目录
 file.upload=d:/upload
 
-# 数据库配置
+#mybatis配置
+#mybatia打印SQL
+logging.level.com.leo.wheel.biz.mapper=debug
+
+# mysql数据库配置
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.datasource.url =jdbc:mysql://47.75.89.172:3306/quick4j
 spring.datasource.username =root
-spring.datasource.password =Leo@0624
+spring.datasource.password =password
+
+# PostgeSQL数据库配置
+spring.datasource.driver-class-name =org.postgresql.Driver
+spring.datasource.url =jdbc:postgresql://127.0.0.1:5432/wheel
+spring.datasource.username =postgres
+spring.datasource.password =zhaoleo
 
 #上传文件大小限制
 spring.http.multipart.max-file-size = 200Mb
