--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.context-path=/leo
 # 文件上传目录
 file.upload=d:/upload
 
+# 文档预览暂存目录
+file.viewer=d:/viewer/
+
 #mybatis配置
 #mybatia打印SQL
 logging.level.com.leo.wheel.biz.mapper=debug
