add image preview

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.12</version>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext-asian</artifactId>
+			<version>5.2.0</version>
+		</dependency>
 		<!-- WORD -->
 		<dependency>
 			<groupId>org.jodconverter</groupId>
