--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,9 @@ spring.datasource.password =zhaoleo
 #上传文件大小限制
 spring.http.multipart.max-file-size = 200Mb
 spring.http.multipart.max-request-size= 210Mb
+
+#设置环境：dev、test、prod
+spring.profiles.active=dev
+#设置日志配置文件，官方推荐优先使用带有 -spring 的文件名作为你的日志配置
+logging.config=classpath:logback-spring.xml
+
