--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.http.multipart.max-request-size= 210Mb
 
 #设置环境：dev、test、prod
 spring.profiles.active=dev
+logging.level.org.springframework.web=prod
 #设置日志配置文件，官方推荐优先使用带有 -spring 的文件名作为你的日志配置
 logging.config=classpath:logback-spring.xml
 
