add mybatis configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,10 @@ file.viewer=d:/viewer/
 logging.level.com.leo.wheel.biz.mapper=debug
 
 # mysql数据库配置
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.datasource.url =jdbc:mysql://47.75.89.172:3306/quick4j
-spring.datasource.username =root
-spring.datasource.password =password
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.datasource.url =jdbc:mysql://47.75.89.172:3306/quick4j
+#spring.datasource.username =root
+#spring.datasource.password =password
 
 # PostgeSQL数据库配置
 spring.datasource.driver-class-name =org.postgresql.Driver
