--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.2</version>
+			<version>1.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -139,6 +139,17 @@
 			<artifactId>guava</artifactId>
 			<version>25.1-jre</version>
 		</dependency>
+		<!-- NETTY-ALL -->
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+		</dependency>
+		<!-- QUARTZ -->
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
 		<!-- test -->
 		<dependency>
@@ -159,6 +170,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<!-- mybatis generator -->
+			<!-- 通过命令mvn mybatis-generator:generate 执行 -->
 			<plugin>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
@@ -195,7 +207,7 @@
 					<!--不允许自动覆盖文件 -->
 					<overwrite>false</overwrite>
 					<configurationFile>
-						src/main/resources/mybatis-generator.xml
+						${basedir}/src/main/resources/mybatis-generator.xml
 					</configurationFile>
 				</configuration>
 			</plugin>
