--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,14 @@
 					</configurationFile>
 				</configuration>
 			</plugin>
+			<!-- mvn跳过测试 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
