--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,36 @@
 server.context-path=/leo
 server.port=8000
 
+# openOffice路径
+office.linux.home=/opt/openoffice.org4
+office.windows.home=C:\\Program Files (x86)\\OpenOffice 4
+office.mac.home=/Application/OpenOffice.org.app/Contents
+
 # 文件上传目录
-file.upload=d:/upload
+file.upload=d:/upload/
 
 # 文档预览暂存目录
 file.viewer=d:/viewer/
+
+# Redis配置
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=47.244.165.23
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=200
 
 #mybatis配置
 #mybatia打印SQL
@@ -53,6 +78,12 @@ spring.datasource.maxOpenPreparedStatements=20
 #上传文件大小限制
 spring.http.multipart.max-file-size=200Mb
 spring.http.multipart.max-request-size=210Mb
+
+# 编码
+server.tomcat.uri-encoding=utf-8
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
 
 #Quartz配置
 # 线程调度器实例名
