--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,6 @@ office.mac.home=/Application/OpenOffice.org.app/Contents
 
 # 文件上传目录
 file.upload=d:/upload/
-
 # 文档预览暂存目录
 file.viewer=d:/viewer/
 
@@ -99,3 +98,23 @@ logging.level.org.springframework.web=prod
 #设置日志配置文件，官方推荐优先使用带有 -spring 的文件名作为你的日志配置
 logging.config=classpath:logback-spring.xml
 
+#Email
+spring.mail.host=smtp.yeah.net
+spring.mail.port=25
+# 你的邮箱地址
+spring.mail.username=cy2020@yeah.net
+# 你的授权码（126 和 163 以及 qq 邮箱 都需要授权码登录，没有授权码的直接登录网页版邮箱设置里设置）
+spring.mail.password=cy2020
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
+#配置thymeleaf
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.excluded-view-names= # comma-separated list of view names   that should be excluded from resolution
+spring.thymeleaf.view-names= # comma-separated list of view names that can be resolved
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html # ;charset=<encoding> is added
