--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,16 @@
 			<artifactId>easyexcel</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!-- Email服务 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<!-- Thymeleaf 模版，用于发送模版邮件 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<!-- UUID -->
 		<dependency>
 			<groupId>com.fasterxml.uuid</groupId>
