add uuid generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,8 +75,10 @@ spring.datasource.poolPreparedStatements=true
 spring.datasource.maxOpenPreparedStatements=20
 
 #上传文件大小限制
-spring.http.multipart.max-file-size=200Mb
-spring.http.multipart.max-request-size=210Mb
+#最大支持文件大小
+spring.servlet.multipart.max-file-size=500MB
+#最大支持请求大小
+spring.servlet.multipart.max-request-size=2000MB
 
 # 编码
 server.tomcat.uri-encoding=utf-8
@@ -86,11 +88,11 @@ spring.http.encoding.enabled=true
 
 #Quartz配置
 # 线程调度器实例名
-org.quartz.scheduler.instanceName=quartzScheduler
-# 线程池的线程数，即最多3个任务同时跑
-org.quartz.threadPool.threadCount=3
-# 使用内存存储任务和触发器等信息
-org.quartz.jobStore.class=org.quartz.simpl.RAMJobStore
+#org.quartz.scheduler.instanceName=quartzScheduler
+## 线程池的线程数，即最多3个任务同时跑
+#org.quartz.threadPool.threadCount=3
+## 使用内存存储任务和触发器等信息
+#org.quartz.jobStore.class=org.quartz.simpl.RAMJobStore
 
 #设置环境：dev、test、prod
 spring.profiles.active=prod
